--- a/WebSite1/Stile.css
+++ b/WebSite1/Stile.css
@@ -1,11 +1,12 @@
 ﻿* {
-    font: 20px arial;
+    font: arial;
 }
 
 .header {
     background-color: #f1f1f1;
     padding: 20px;
     text-align: center;
+    color: red;
 }
 
 .details {
