--- a/WebSite1/Stile.css
+++ b/WebSite1/Stile.css
@@ -54,3 +54,56 @@
 .active {
     background-color: #4CAF50;
 }
+
+.cmb {
+    font-size: 13px;
+    margin: 20px;
+}
+
+@-webkit-keyframes hvr-ripple-out {
+    100% {
+        top: -12px;
+        right: -12px;
+        bottom: -12px;
+        left: -12px;
+        opacity: 0;
+    }
+}
+
+@keyframes hvr-ripple-out {
+    100% {
+        top: -12px;
+        right: -12px;
+        bottom: -12px;
+        left: -12px;
+        opacity: 0;
+    }
+}
+
+.hvr-ripple-out {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    
+}
+
+    .hvr-ripple-out:before {
+        content: '';
+        position: absolute;
+        border: #33333333 solid 2px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        -webkit-animation-duration: 1.3s;
+        animation-duration: 1.3s;
+    }
+
+    .hvr-ripple-out:hover:before, .hvr-ripple-out:focus:before, .hvr-ripple-out:active:before {
+        -webkit-animation-name: hvr-ripple-out;
+        animation-name: hvr-ripple-out;
+        border: #18bd1af5 solid 2px;
+    }
