--- a/WebSite1/Stile.css
+++ b/WebSite1/Stile.css
@@ -1,5 +1,6 @@
 ﻿* {
     font: arial;
+    position: relative;
 }
 
 .header {
@@ -9,23 +10,40 @@
     color: red;
 }
 
-h2{
-    text-align:center;
+h2 {
+    text-align: center;
+}
+
+h3 {
+    width:100%;
+}
+
+hr {
 }
 
 .details {
+    display: flex;
+    flex-direction: row;
+    height: 230px;
+}
+
+.text {
 }
 
 #piechart {
     width: 550px;
     height: 306px;
-    
 }
 
 .chart {
+    position: absolute;
+    right: 0;
+    z-index: -1;
 }
 
 .menu {
+    display: inline-block;
+    justify-content: center;
 }
 
 .lezione {
@@ -38,24 +56,23 @@ h2{
     overflow: hidden;
     background-color: #333;
     display: inline-block;
-    left: 50%;
+    left: 15%;
 }
 
-.menu ul li {
-    display: inline;
-    padding: 6px;
-    border-right: 1px solid #bbb;
-    float: left;
-}
+    .menu ul li {
+        display: inline;
+        padding: 6px;
+        border-right: 1px solid #bbb;
+        float: left;
+    }
 
-.menu ul li a {
-    display: block;
-    color: white;
-    text-align: center;
-    /*padding: 14px 16px;*/
-    text-decoration: none;
-
-}
+        .menu ul li a {
+            display: block;
+            color: white;
+            text-align: center;
+            /*padding: 14px 16px;*/
+            text-decoration: none;
+        }
 
 .menu ul li a:hover:not(.active) {
     background-color: #4CAF50;
