--- a/WebSite1/Stile.css
+++ b/WebSite1/Stile.css
@@ -11,7 +11,7 @@
 }
 
 .text1 {
-    left: 13px;
+    left: 7px;
     line-height: 20px;
     width: 30%;
 }
@@ -20,6 +20,7 @@
     left: 13px;
     line-height: 20px;
     width: 40%;
+    margin-right:13px;
 }
 
 .longString {
@@ -88,8 +89,9 @@ h2 {
 }
 
 .cmb {
-    font-size: 13px;
+    font-size: 16px;
     margin: 20px;
+    width:15%;
 }
 
 table {
@@ -98,8 +100,13 @@ table {
 }
 
 .leftColumn {
-    text-align:right;
-    width:100px;
+    text-align: right;
+    width: 100px;
+    font-weight: bold;
+}
+
+.description {
+    text-align:center;
 }
 
 @media (max-width: 1300px) {
