--- a/WebSite1/Stile.css
+++ b/WebSite1/Stile.css
@@ -84,6 +84,13 @@ h2 {
                 background-color: #5fa2dd;
             }
 
+#piu {
+    padding-top: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 8px;
+}
+
 .active {
     background-color: darkblue;
 }
@@ -101,7 +108,7 @@ table {
 
 .leftColumn {
     text-align: right;
-    width: 100px;
+    width: 110px;
     font-weight: bold;
 }
 
@@ -118,7 +125,7 @@ table {
 
     .text1 {
         left: 13px;
-        line-height: 20px;
+        line-height: 15px;
         width: 60%;
     }
 
@@ -167,7 +174,7 @@ table {
     .hvr-ripple-out:before {
         content: '';
         position: absolute;
-        border: #5fa2dd solid 2px;
+        border: #6495ed solid 2px;
         top: 0;
         right: 0;
         bottom: 0;
