Pagine di modifica

--- a/WebSite1/Stile.css
+++ b/WebSite1/Stile.css
@@ -7,7 +7,7 @@
     background-color: #f1f1f1;
     padding: 20px;
     text-align: center;
-    color: red;
+    color: cornflowerblue;
 }
 
 .text1 {
